add moment.js and implement some clock logic

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
 	<link rel="stylesheet" href="css/fonts.css">
 </head>
 <body id="test">
-	<div id="one"><a href="#">New York</a></div>
-	<div id="two"><a href="#">Auckland</a></div>
-	<div id="three"><a href="#">Dubai</a></div>
+	<div class="clock NYC"></div>
+<!-- 	<div id="sun"></div> -->
+	<div id="flexBox">
+		<div id="one"><a href="#">New York</a></div>
+		<div id="two"><a href="#">Auckland</a></div>
+		<div id="three"><a href="#">Dubai</a></div>
+	</div>
 	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/moment.min.js"></script>
+	<script src="js/moment-timezone-with-data-2012-2022.min.js"></script>
+	<script src="js/clock.js"></script>
 	<script src="js/suncalc.js"></script>
 	<script src="js/scripts.js"></script>
 </body>
